Fix bug nuove recensioni scritte senza andare a capo, aggiunti test, sessione annullata ora viene eliminata dopo 24 ore come annuncio eliminato